src/tess/tl/test/pass/test_generic_struct_null_fn_ptr_field.tl
#module main

// Constructing a generic struct with null for a function pointer field
// that references a generic type parameter should resolve the type.

Foo[K]: {
    f: (Ptr[K]) -> UInt,
}

main() {
    opts := Foo[Int](f = null)
    if opts.f == null { return 0 }
    1
}
